修复部分虎牙直播间无法获取直播流的问题(#200,#211,#218), 提供上传超时功能(#212)

--- a/configs/default.yml
+++ b/configs/default.yml
@@ -156,8 +156,11 @@ uploader:
     # 上传账号名称，程序依靠这个来识别不同的账号，如果打算传不同账号就要设置不同的名称
     account: bilibili
 
-    # （此功能暂不生效）重试次数，如果上传遇到错误将会重试，设置为0表示不重试
+    # 重试次数，如果上传遇到错误将会重试，设置为0表示不重试
     retry: 0
+
+    # 上传超时时间（秒），如果上传时间超过这个时间将会被强制终止（用于防止biliup卡死），0表示不限制
+    timeout: 0
 
     # 实时上传，每录制一个分段上传一次，同一场直播的不同分P仍然会在一个视频下，默认关闭
     # 如果启用实时上传，请保证上传速度足够，否则可能阻塞上传队列
