--- a/configs/example.yml
+++ b/configs/example.yml
@@ -103,6 +103,9 @@ upload:
     # 注意：重试会整个视频重传，并且阻塞后面视频的上传，不应该设置太大
     retry: 0
 
+    # 上传超时时间（秒），如果上传时间超过这个时间将会被强制终止（用于防止biliup卡死），0表示不限制
+    timeout: 0
+
     # 实时上传（边录边传），每录制一个分段上传一次，同一场直播的不同分P仍然会在一个视频下，默认关闭
     # 如果启用实时上传并且录制多个主播，请保证上传速度足够，否则可能阻塞上传队列
     # 注意：实时上传可能无法上传很短的视频，尤其是在网速较快的情况下（B站对修改稿件的间隔有限制）
