--- a/configs/default.yml
+++ b/configs/default.yml
@@ -133,6 +133,10 @@ render:
   # 高级渲染参数，具体可用选项请参考文档
   advanced_render_args: ~
 
+  watermark_text: "默认水印"
+
+  font_path: "/System/Library/Fonts/PingFang.ttc"
+
   # 以下参数只适用于python渲染器
   # 渲染线程数（单个渲染器使用的进程数量），默认2
   nproc: 2
